kicker/actionlist: Ensure we parse the args for the jumplist actions

BUG: 451418